compiler/proj_hw3/proj3_403410016/CactusParser.java
// Generated from Cactus.g4 by ANTLR 4.5.2
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class CactusParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.5.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		TRUE=1, FALSE=2, ELSE=3, IF=4, FI=5, INT=6, MAIN=7, RETURN=8, WHILE=9, 
		READ=10, WRITE=11, ADD=12, MINUS=13, MULTIPLY=14, DIVIDE=15, PERCENT=16, 
		EQ=17, NOTEQ=18, GREATERTHAN=19, GREATERTHAN_OR_EQ=20, LESSTHAN=21, LESSTHAN_OR_EQ=22, 
		AND=23, OR=24, NOT=25, ASSIGN=26, LP=27, RP=28, LB=29, RB=30, SEMICOLON=31, 
		NUMBER=32, ID=33, COMMENT=34, WHITESPACE=35, ERROR=36;
	public static final int
		RULE_token = 0, RULE_program = 1, RULE_declarations = 2, RULE_statements = 3, 
		RULE_statement = 4, RULE_bool_expression = 5, RULE_bool_expressions = 6, 
		RULE_bool_term = 7, RULE_bool_terms = 8, RULE_bool_factor = 9, RULE_rel_expression = 10, 
		RULE_relation_op = 11, RULE_arith_expression = 12, RULE_arith_expressions = 13, 
		RULE_arith_term = 14, RULE_arith_terms = 15, RULE_arith_factor = 16, RULE_primary_expression = 17;
	public static final String[] ruleNames = {
		"token", "program", "declarations", "statements", "statement", "bool_expression", 
		"bool_expressions", "bool_term", "bool_terms", "bool_factor", "rel_expression", 
		"relation_op", "arith_expression", "arith_expressions", "arith_term", 
		"arith_terms", "arith_factor", "primary_expression"
	};

	private static final String[] _LITERAL_NAMES = {
		null, "'true'", "'false'", "'else'", "'if'", "'fi'", "'int'", "'main'", 
		"'return'", "'while'", "'read'", "'write'", "'+'", "'-'", "'*'", "'/'", 
		"'%'", "'=='", "'!='", "'>'", "'>='", "'<'", "'<='", "'&&'", "'||'", "'!'", 
		"'='", "'('", "')'", "'{'", "'}'", "';'"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, "TRUE", "FALSE", "ELSE", "IF", "FI", "INT", "MAIN", "RETURN", "WHILE", 
		"READ", "WRITE", "ADD", "MINUS", "MULTIPLY", "DIVIDE", "PERCENT", "EQ", 
		"NOTEQ", "GREATERTHAN", "GREATERTHAN_OR_EQ", "LESSTHAN", "LESSTHAN_OR_EQ", 
		"AND", "OR", "NOT", "ASSIGN", "LP", "RP", "LB", "RB", "SEMICOLON", "NUMBER", 
		"ID", "COMMENT", "WHITESPACE", "ERROR"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Cactus.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public CactusParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class TokenContext extends ParserRuleContext {
		public List<TerminalNode> ID() { return getTokens(CactusParser.ID); }
		public TerminalNode ID(int i) {
			return getToken(CactusParser.ID, i);
		}
		public List<TerminalNode> ELSE() { return getTokens(CactusParser.ELSE); }
		public TerminalNode ELSE(int i) {
			return getToken(CactusParser.ELSE, i);
		}
		public List<TerminalNode> IF() { return getTokens(CactusParser.IF); }
		public TerminalNode IF(int i) {
			return getToken(CactusParser.IF, i);
		}
		public List<TerminalNode> FI() { return getTokens(CactusParser.FI); }
		public TerminalNode FI(int i) {
			return getToken(CactusParser.FI, i);
		}
		public List<TerminalNode> INT() { return getTokens(CactusParser.INT); }
		public TerminalNode INT(int i) {
			return getToken(CactusParser.INT, i);
		}
		public List<TerminalNode> MAIN() { return getTokens(CactusParser.MAIN); }
		public TerminalNode MAIN(int i) {
			return getToken(CactusParser.MAIN, i);
		}
		public List<TerminalNode> RETURN() { return getTokens(CactusParser.RETURN); }
		public TerminalNode RETURN(int i) {
			return getToken(CactusParser.RETURN, i);
		}
		public List<TerminalNode> WHILE() { return getTokens(CactusParser.WHILE); }
		public TerminalNode WHILE(int i) {
			return getToken(CactusParser.WHILE, i);
		}
		public List<TerminalNode> READ() { return getTokens(CactusParser.READ); }
		public TerminalNode READ(int i) {
			return getToken(CactusParser.READ, i);
		}
		public List<TerminalNode> WRITE() { return getTokens(CactusParser.WRITE); }
		public TerminalNode WRITE(int i) {
			return getToken(CactusParser.WRITE, i);
		}
		public List<TerminalNode> ADD() { return getTokens(CactusParser.ADD); }
		public TerminalNode ADD(int i) {
			return getToken(CactusParser.ADD, i);
		}
		public List<TerminalNode> MINUS() { return getTokens(CactusParser.MINUS); }
		public TerminalNode MINUS(int i) {
			return getToken(CactusParser.MINUS, i);
		}
		public List<TerminalNode> MULTIPLY() { return getTokens(CactusParser.MULTIPLY); }
		public TerminalNode MULTIPLY(int i) {
			return getToken(CactusParser.MULTIPLY, i);
		}
		public List<TerminalNode> DIVIDE() { return getTokens(CactusParser.DIVIDE); }
		public TerminalNode DIVIDE(int i) {
			return getToken(CactusParser.DIVIDE, i);
		}
		public List<TerminalNode> PERCENT() { return getTokens(CactusParser.PERCENT); }
		public TerminalNode PERCENT(int i) {
			return getToken(CactusParser.PERCENT, i);
		}
		public List<TerminalNode> EQ() { return getTokens(CactusParser.EQ); }
		public TerminalNode EQ(int i) {
			return getToken(CactusParser.EQ, i);
		}
		public List<TerminalNode> NOTEQ() { return getTokens(CactusParser.NOTEQ); }
		public TerminalNode NOTEQ(int i) {
			return getToken(CactusParser.NOTEQ, i);
		}
		public List<TerminalNode> GREATERTHAN() { return getTokens(CactusParser.GREATERTHAN); }
		public TerminalNode GREATERTHAN(int i) {
			return getToken(CactusParser.GREATERTHAN, i);
		}
		public List<TerminalNode> GREATERTHAN_OR_EQ() { return getTokens(CactusParser.GREATERTHAN_OR_EQ); }
		public TerminalNode GREATERTHAN_OR_EQ(int i) {
			return getToken(CactusParser.GREATERTHAN_OR_EQ, i);
		}
		public List<TerminalNode> LESSTHAN() { return getTokens(CactusParser.LESSTHAN); }
		public TerminalNode LESSTHAN(int i) {
			return getToken(CactusParser.LESSTHAN, i);
		}
		public List<TerminalNode> LESSTHAN_OR_EQ() { return getTokens(CactusParser.LESSTHAN_OR_EQ); }
		public TerminalNode LESSTHAN_OR_EQ(int i) {
			return getToken(CactusParser.LESSTHAN_OR_EQ, i);
		}
		public List<TerminalNode> AND() { return getTokens(CactusParser.AND); }
		public TerminalNode AND(int i) {
			return getToken(CactusParser.AND, i);
		}
		public List<TerminalNode> OR() { return getTokens(CactusParser.OR); }
		public TerminalNode OR(int i) {
			return getToken(CactusParser.OR, i);
		}
		public List<TerminalNode> NOT() { return getTokens(CactusParser.NOT); }
		public TerminalNode NOT(int i) {
			return getToken(CactusParser.NOT, i);
		}
		public List<TerminalNode> ASSIGN() { return getTokens(CactusParser.ASSIGN); }
		public TerminalNode ASSIGN(int i) {
			return getToken(CactusParser.ASSIGN, i);
		}
		public List<TerminalNode> LP() { return getTokens(CactusParser.LP); }
		public TerminalNode LP(int i) {
			return getToken(CactusParser.LP, i);
		}
		public List<TerminalNode> RP() { return getTokens(CactusParser.RP); }
		public TerminalNode RP(int i) {
			return getToken(CactusParser.RP, i);
		}
		public List<TerminalNode> LB() { return getTokens(CactusParser.LB); }
		public TerminalNode LB(int i) {
			return getToken(CactusParser.LB, i);
		}
		public List<TerminalNode> RB() { return getTokens(CactusParser.RB); }
		public TerminalNode RB(int i) {
			return getToken(CactusParser.RB, i);
		}
		public List<TerminalNode> SEMICOLON() { return getTokens(CactusParser.SEMICOLON); }
		public TerminalNode SEMICOLON(int i) {
			return getToken(CactusParser.SEMICOLON, i);
		}
		public List<TerminalNode> WHITESPACE() { return getTokens(CactusParser.WHITESPACE); }
		public TerminalNode WHITESPACE(int i) {
			return getToken(CactusParser.WHITESPACE, i);
		}
		public List<TerminalNode> COMMENT() { return getTokens(CactusParser.COMMENT); }
		public TerminalNode COMMENT(int i) {
			return getToken(CactusParser.COMMENT, i);
		}
		public List<TerminalNode> NUMBER() { return getTokens(CactusParser.NUMBER); }
		public TerminalNode NUMBER(int i) {
			return getToken(CactusParser.NUMBER, i);
		}
		public TokenContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_token; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CactusListener ) ((CactusListener)listener).enterToken(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CactusListener ) ((CactusListener)listener).exitToken(this);
		}
	}

	public final TokenContext token() throws RecognitionException {
		TokenContext _localctx = new TokenContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_token);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(39);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << ELSE) | (1L << IF) | (1L << FI) | (1L << INT) | (1L << MAIN) | (1L << RETURN) | (1L << WHILE) | (1L << READ) | (1L << WRITE) | (1L << ADD) | (1L << MINUS) | (1L << MULTIPLY) | (1L << DIVIDE) | (1L << PERCENT) | (1L << EQ) | (1L << NOTEQ) | (1L << GREATERTHAN) | (1L << GREATERTHAN_OR_EQ) | (1L << LESSTHAN) | (1L << LESSTHAN_OR_EQ) | (1L << AND) | (1L << OR) | (1L << NOT) | (1L << ASSIGN) | (1L << LP) | (1L << RP) | (1L << LB) | (1L << RB) | (1L << SEMICOLON) | (1L << NUMBER) | (1L << ID) | (1L << COMMENT) | (1L << WHITESPACE))) != 0)) {
				{
				{
				setState(36);
				_la = _input.LA(1);
				if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << ELSE) | (1L << IF) | (1L << FI) | (1L << INT) | (1L << MAIN) | (1L << RETURN) | (1L << WHILE) | (1L << READ) | (1L << WRITE) | (1L << ADD) | (1L << MINUS) | (1L << MULTIPLY) | (1L << DIVIDE) | (1L << PERCENT) | (1L << EQ) | (1L << NOTEQ) | (1L << GREATERTHAN) | (1L << GREATERTHAN_OR_EQ) | (1L << LESSTHAN) | (1L << LESSTHAN_OR_EQ) | (1L << AND) | (1L << OR) | (1L << NOT) | (1L << ASSIGN) | (1L << LP) | (1L << RP) | (1L << LB) | (1L << RB) | (1L << SEMICOLON) | (1L << NUMBER) | (1L << ID) | (1L << COMMENT) | (1L << WHITESPACE))) != 0)) ) {
				_errHandler.recoverInline(this);
				} else {
					consume();
				}
				}
				}
				setState(41);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ProgramContext extends ParserRuleContext {
		public TerminalNode MAIN() { return getToken(CactusParser.MAIN, 0); }
		public TerminalNode LP() { return getToken(CactusParser.LP, 0); }
		public TerminalNode RP() { return getToken(CactusParser.RP, 0); }
		public TerminalNode LB() { return getToken(CactusParser.LB, 0); }
		public DeclarationsContext declarations() {
			return getRuleContext(DeclarationsContext.class,0);
		}
		public StatementsContext statements() {
			return getRuleContext(StatementsContext.class,0);
		}
		public TerminalNode RB() { return getToken(CactusParser.RB, 0); }
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CactusListener ) ((CactusListener)listener).enterProgram(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CactusListener ) ((CactusListener)listener).exitProgram(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_program);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(42);
			match(MAIN);
			setState(43);
			match(LP);
			setState(44);
			match(RP);
			setState(45);
			match(LB);
			System.out.println("\t"+".data");
			setState(47);
			declarations();

						System.out.println("\t"+".text");
						System.out.println("main:");
					
			setState(49);
			statements(0, 1);
			setState(50);
			match(RB);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DeclarationsContext extends ParserRuleContext {
		public Token ID;
		public TerminalNode INT() { return getToken(CactusParser.INT, 0); }
		public TerminalNode ID() { return getToken(CactusParser.ID, 0); }
		public TerminalNode SEMICOLON() { return getToken(CactusParser.SEMICOLON, 0); }
		public DeclarationsContext declarations() {
			return getRuleContext(DeclarationsContext.class,0);
		}
		public DeclarationsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declarations; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CactusListener ) ((CactusListener)listener).enterDeclarations(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CactusListener ) ((CactusListener)listener).exitDeclarations(this);
		}
	}

	public final DeclarationsContext declarations() throws RecognitionException {
		DeclarationsContext _localctx = new DeclarationsContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_declarations);
		try {
			setState(58);
			switch (_input.LA(1)) {
			case INT:
				enterOuterAlt(_localctx, 1);
				{
				setState(52);
				match(INT);
				setState(53);
				((DeclarationsContext)_localctx).ID = match(ID);
				setState(54);
				match(SEMICOLON);
				System.out.println((((DeclarationsContext)_localctx).ID!=null?((DeclarationsContext)_localctx).ID.getText():null) + ":\t" + ".word 0");
				setState(56);
				declarations();
				}
				break;
			case IF:
			case RETURN:
			case WHILE:
			case READ:
			case WRITE:
			case RB:
			case ID:
				enterOuterAlt(_localctx, 2);
				{
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StatementsContext extends ParserRuleContext {
		public int reg;
		public int label;
		public int nreg;
		public int nlabel;
		public StatementContext statement;
		public StatementsContext statements1;
		public StatementContext statement() {
			return getRuleContext(StatementContext.class,0);
		}
		public StatementsContext statements() {
			return getRuleContext(StatementsContext.class,0);
		}
		public StatementsContext(ParserRuleContext parent, int invokingState) { super(parent, invokingState); }
		public StatementsContext(ParserRuleContext parent, int invokingState, int reg, int label) {
			super(parent, invokingState);
			this.reg = reg;
			this.label = label;
		}
		@Override public int getRuleIndex() { return RULE_statements; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CactusListener ) ((CactusListener)listener).enterStatements(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CactusListener ) ((CactusListener)listener).exitStatements(this);
		}
	}

	public final StatementsContext statements(int reg,int label) throws RecognitionException {
		StatementsContext _localctx = new StatementsContext(_ctx, getState(), reg, label);
		enterRule(_localctx, 6, RULE_statements);
		try {
			setState(65);
			switch (_input.LA(1)) {
			case IF:
			case RETURN:
			case WHILE:
			case READ:
			case WRITE:
			case ID:
				enterOuterAlt(_localctx, 1);
				{
				setState(60);
				((StatementsContext)_localctx).statement = statement(0, _localctx.label);
				setState(61);
				((StatementsContext)_localctx).statements1 = statements(((StatementsContext)_localctx).statement.nreg, ((StatementsContext)_localctx).statement.nlabel);

						((StatementsContext)_localctx).nreg =  ((StatementsContext)_localctx).statements1.nreg;
						((StatementsContext)_localctx).nlabel =  ((StatementsContext)_localctx).statements1.nlabel;
					
				}
				break;
			case RB:
				enterOuterAlt(_localctx, 2);
				{

						((StatementsContext)_localctx).nreg =  _localctx.reg;
						((StatementsContext)_localctx).nlabel =  _localctx.label;
					
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StatementContext extends ParserRuleContext {
		public int reg;
		public int label;
		public int nreg;
		public int nlabel;
		public Token ID;
		public Arith_expressionContext arith_expression;
		public Bool_expressionContext bool_expression;
		public StatementsContext statements1;
		public StatementsContext statements2;
		public StatementsContext statements;
		public TerminalNode ID() { return getToken(CactusParser.ID, 0); }
		public TerminalNode ASSIGN() { return getToken(CactusParser.ASSIGN, 0); }
		public Arith_expressionContext arith_expression() {
			return getRuleContext(Arith_expressionContext.class,0);
		}
		public TerminalNode SEMICOLON() { return getToken(CactusParser.SEMICOLON, 0); }
		public TerminalNode READ() { return getToken(CactusParser.READ, 0); }
		public TerminalNode WRITE() { return getToken(CactusParser.WRITE, 0); }
		public TerminalNode RETURN() { return getToken(CactusParser.RETURN, 0); }
		public TerminalNode IF() { return getToken(CactusParser.IF, 0); }
		public TerminalNode LP() { return getToken(CactusParser.LP, 0); }
		public Bool_expressionContext bool_expression() {
			return getRuleContext(Bool_expressionContext.class,0);
		}
		public TerminalNode RP() { return getToken(CactusParser.RP, 0); }
		public List<TerminalNode> LB() { return getTokens(CactusParser.LB); }
		public TerminalNode LB(int i) {
			return getToken(CactusParser.LB, i);
		}
		public List<TerminalNode> RB() { return getTokens(CactusParser.RB); }
		public TerminalNode RB(int i) {
			return getToken(CactusParser.RB, i);
		}
		public TerminalNode ELSE() { return getToken(CactusParser.ELSE, 0); }
		public TerminalNode FI() { return getToken(CactusParser.FI, 0); }
		public List<StatementsContext> statements() {
			return getRuleContexts(StatementsContext.class);
		}
		public StatementsContext statements(int i) {
			return getRuleContext(StatementsContext.class,i);
		}
		public TerminalNode WHILE() { return getToken(CactusParser.WHILE, 0); }
		public StatementContext(ParserRuleContext parent, int invokingState) { super(parent, invokingState); }
		public StatementContext(ParserRuleContext parent, int invokingState, int reg, int label) {
			super(parent, invokingState);
			this.reg = reg;
			this.label = label;
		}
		@Override public int getRuleIndex() { return RULE_statement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CactusListener ) ((CactusListener)listener).enterStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CactusListener ) ((CactusListener)listener).exitStatement(this);
		}
	}
